--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.5.0"
 description = "Python SDK for Sekha AI Memory System"
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.8"
+requires-python = ">=3.8,<4.0"
 authors = [
     { name = "Sekha AI", email = "jeff@sekha-ai.dev" },
 ]
