--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 
 env:
-  PYTHON_VERSION: "3.11"
+  PYTHON_VERSION: "3.14"
 
 
 jobs:
@@ -59,7 +59,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.12", "3.14"]
 
     steps:
       - name: Checkout code
@@ -90,12 +90,12 @@ jobs:
           pytest tests/ -v --cov=sekha --cov-report=xml --cov-report=term-missing
 
       - name: Check coverage threshold
-        if: matrix.python-version == '3.11'
+        if: matrix.python-version == '3.14'
         run: |
           coverage report --fail-under=90
 
       - name: Upload coverage to Codecov
-        if: matrix.python-version == '3.11'
+        if: matrix.python-version == '3.14'
         uses: codecov/codecov-action@v5
         with:
           files: ./coverage.xml
